changed the sidebar__item-info div to an anchor tag
this way you can click on the recent item and it will link you to the article

--- a/styles.css
+++ b/styles.css
@@ -330,6 +330,7 @@ this is the inner grid that holds the main article and sidebar
     justify-content: space-evenly;
     padding:.5em;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.274);
+    color:var(--clr-text);
     
 }
 
