--- a/styles.css
+++ b/styles.css
@@ -319,6 +319,13 @@ this is the inner grid that holds the main article and sidebar
     display:flex;
     flex-direction:column;
     border:solid 3px var(--clr-sidebar-info);
+    transition:.5s;
+}
+
+
+.sidebar__item:hover {
+   
+    border:solid 3px var(--clr-highlight);
 }
 
 .sidebar__item-info {
@@ -384,9 +391,10 @@ this is the inner grid that holds the main article and sidebar
 }
 
 .newest-post iframe {
-    /* margin: 1em auto; */
     margin: 1em 0 1em 0;
+    /* this max-width keeps the video from stretching to fill the space */
     max-width: 560px;
+    /* this width allows the video to shrink when the container gets smaller */
     width: 100%;
 }
 
@@ -472,7 +480,7 @@ this is the inner grid that holds the main article and sidebar
 i {
     color: var(--clr-links);
     /* transform: scale(200%); */
-    transition: 0.25s;
+    transition: 0.15s;
 }
 
 i:hover {
@@ -543,6 +551,7 @@ i:hover {
         width: 200px;
         background:none;
         margin: 0.5em;
+       
     }
 
     /* sticky nav for mobile */
