--- a/styles.css
+++ b/styles.css
@@ -297,8 +297,8 @@ this is the inner grid that holds the main article and sidebar
 
 /* this wraps the sidebar title and items */
 .sidebar-wrap {
-    position: sticky;
-    top: 1em;
+    /* position: sticky;
+    top: 1em; */
     background: var(--clr-content-bg);
     padding: 0.5em;
     border-radius: 5px;
@@ -353,6 +353,15 @@ this is the inner grid that holds the main article and sidebar
     color:var(--clr-highlight);
 }
 
+.more-posts {
+    background:var(--clr-content-bg);
+    height:100px;
+    width:100%;
+   margin: 1em 0;
+   position:sticky;
+   top:1em;
+}
+
 /* /////////////
                                                 MAIN CONTENT
                                               ////////////// */
@@ -360,8 +369,8 @@ this is the inner grid that holds the main article and sidebar
 /* GRID AREA - A -- this is the container for the main article */
 .newest-post {
     grid-area: a;
-    background: var(--clr-content-bg);
-    padding: 1em;
+    /* background: var(--clr-content-bg); */
+    padding: 0;
     border-radius: 5px;
 }
 
@@ -369,8 +378,12 @@ this is the inner grid that holds the main article and sidebar
 .newest-post__content-wrap {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: auto;
+    background: var(--clr-content-bg);
+    padding:1em;
+    border-radius:5px;
 }
+
 
 .newest-post__p {
     margin: 0;
@@ -532,11 +545,9 @@ i:hover {
 
     .main-content__sidebar {
         grid-area: s;
-        /* background:rgb(20,20,20); */
-        background: var(--clr-content-bg);
+        /* background: var(--clr-content-bg); */
         padding: 0;
-        /*   display:flex;
-    flex-direction:column; */
+  
     }
 
     .sidebar__h3 {
@@ -728,6 +739,13 @@ i:hover {
 }
 
 @media only screen and (max-width: 750px) {
+    
+    
+    /* this makes it so the hover effect is canceled out for mobile */
+    .sidebar__item:hover {
+        border:solid 3px var(--clr-sidebar-info);
+    }
+    
     .sidebar__item-wrap {
         flex-direction: column;
     }
@@ -751,7 +769,7 @@ i:hover {
 
     .newest-post {
         margin-top: 0;
-        padding: 0.75em;
+        /* padding: 0.75em; */
     }
     .newest-post__h2 {
         font-size: 2.6rem;
