--- a/styles.css
+++ b/styles.css
@@ -295,10 +295,27 @@ this is the inner grid that holds the main article and sidebar
 }
 
 .sidebar__img {
-    max-height:150px;
+    height: 150px;
     width:100%;
-    height:100%;
+    
     object-fit: cover;
+}
+
+.sidebar__blog-link {
+    margin:1em 0 0 0;
+    width:100%;
+    color:var(--clr-accent);
+    text-align:center;
+    border:solid var(--clr-primary) 2px;
+    border-radius:999px;
+    padding:.5em;
+    font-size:1.4rem;
+}
+
+.sidebar__blog-link:hover {
+    color: var(--clr-links);
+    border: solid var(--clr-primary) 2px;
+    background: var(--clr-primary);
 }
 
 /* this wraps the sidebar title and items */
@@ -308,6 +325,8 @@ this is the inner grid that holds the main article and sidebar
     background: var(--clr-content-bg);
     padding: 0.5em;
     border-radius: 5px;
+    display:flex;
+    flex-direction: column;
 }
 
 /* this wraps just the sidebar items */
@@ -336,7 +355,7 @@ this is the inner grid that holds the main article and sidebar
 
 .sidebar__item-info {
     width:100%;
-    height:75px;
+    min-height:75px;
     background:var(--clr-sidebar-info);
     display:flex;
     flex-direction:column;
@@ -399,7 +418,7 @@ this is the inner grid that holds the main article and sidebar
     flex-direction: column;
     height: auto;
     background: var(--clr-content-bg);
-    padding:1em;
+    padding:.75em;
     border-radius:5px;
 }
 
