--- a/styles.css
+++ b/styles.css
@@ -128,7 +128,7 @@ blockquote {
 ------------------------------------------*/
 .grid-container__header {
     /* background: var(--clr-background); */
-    background: var(--linear-gradient), url("images/carbonfiber.png");
+    background: var(--linear-gradient), url("https://conradmcgrifter.github.io/itsyaboiii/images/carbonfiber.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
