--- a/styles.css
+++ b/styles.css
@@ -766,7 +766,7 @@ i:hover {
         display: block;
         position: relative;
         color: white;
-        padding: 0.25em;
+        padding: 0.25em .25em .25em .5em;
         cursor: pointer;
         width:40px;
     }
@@ -835,6 +835,10 @@ i:hover {
 
 @media only screen and (max-width: 750px) {
 
+    .grid-container {
+        grid-template-rows: 100px auto 100px;
+    }
+
     /* this makes it so the hover effect is canceled out for mobile */
     .sidebar__item:hover .sidebar__item-info {
    
@@ -876,17 +880,13 @@ i:hover {
         margin: 0.5em;
     }
 
-    /* .grid-container__header {
-        background: linear-gradient(
-                rgba(0, 0, 0, 0.712),
-                rgba(10, 10, 10, 0.877)
-            ),
-            url(images/carbonfiber.png);
+    .grid-container__header {
+        background:var(--clr-nav);
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
         background-attachment: fixed;
-    } */
+    }
 
     .title-wrap {
         text-align: unset;
