--- a/styles.css
+++ b/styles.css
@@ -263,7 +263,7 @@ this is the inner grid that holds the main article and sidebar
     display: flex;
     width: 50%;
     max-width: 600px;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     margin: 0.25em;
     padding: 0;
@@ -305,7 +305,6 @@ this is the inner grid that holds the main article and sidebar
     text-align: center;
     /* padding: 1em 0 0 0; */
     font-size: 2rem;
-    text-decoration: underline;
 }
 
 .sidebar__img {
@@ -321,7 +320,7 @@ this is the inner grid that holds the main article and sidebar
 }
 
 .sidebar__blog-link {
-    margin: 1em 0 0 0;
+    margin: 1.5em 0 0 0;
     width: 100%;
     color: var(--clr-accent);
     text-align: center;
@@ -342,7 +341,7 @@ this is the inner grid that holds the main article and sidebar
     /* position: sticky;
     top: 1em; */
     background: var(--clr-content-bg);
-    padding: 0.5em;
+    padding: 0.75em;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
@@ -356,10 +355,10 @@ this is the inner grid that holds the main article and sidebar
 }
 
 .sidebar__item {
-    max-height: 250px;
+    /* max-height: 250px; */
     width: 100%;
     background: none;
-    margin-top: 1em;
+    margin-top: 1.5em;
     display: flex;
     flex-direction: column;
     border: solid 1px var(--clr-primary);
@@ -597,7 +596,7 @@ i:hover {
     color: var(--clr-text);
     /* align-items: center; */
     padding: 0.5em;
-
+    overflow: hidden;
     position: relative;
 }
 
@@ -619,13 +618,14 @@ i:hover {
     position: absolute;
     top: 0;
     left: 0;
-    filter: opacity(7%);
+    filter: opacity(15%);
     z-index: 0;
     transition: 0.5s;
 }
 
 .blog-grid__item:hover img {
-    filter: opacity(45%);
+    filter: opacity(75%);
+    transform: scale(1.15);
 }
 
 .all-blog-posts {
@@ -642,15 +642,69 @@ i:hover {
     z-index: 2;
     transition: 0.25s;
     padding: 0.5em;
+    background: var(--clr-content-bg);
 }
 
-.blog-grid__item:hover .blog-grid__item-info-wrap {
+/* .blog-grid__item:hover .blog-grid__item-info-wrap {
     background: var(--clr-content-bg);
+} */
+
+/* 
+                                        single blog post 
+                                        =================== */
+
+.blog-post__img {
+    /* this max-width keeps the video from stretching to fill the space */
+    max-width: 500px;
+    /* this width allows the video to shrink when the container gets smaller */
+    width: 100%;
+    margin: 1em 0 1em 0;
+    object-fit: cover;
+}
+
+.blog-post--wrapper {
+    max-width: 750px;
+    /* min-width: 500px; */
+    height: 100%;
+
+    margin: 2em;
+}
+
+.blog-post {
+    background: var(--clr-content-bg);
+    border-radius: 5px;
+    padding: 0.75em;
+    width: 100%;
+}
+
+.blog-post__h1 {
+    font-size: 3.5rem;
+    margin: 0 0 0.5em 0;
+}
+
+.blog-post__h2 {
+    font-size: 1.8rem;
+    color: var(--clr-primary);
+}
+
+.link-wrap {
+    display: flex;
+    width: 75%;
+    justify-content: space-between;
+    margin: auto;
+    margin-top: 2em;
+    padding: 1em;
+}
+
+.next-post,
+.previous-post {
+    font-size: 1.8rem;
+    color: var(--clr-links);
 }
 
 /*////////////////  
                                             MEDIA QUERIES
-                                        ////////////////// */
+                                         ////////////////// */
 
 /* this media query switches the main content grid to two columns instead of 3 */
 @media only screen and (max-width: 1200px) {
@@ -698,7 +752,6 @@ i:hover {
         /* background:rgba(33,33,33,.5); */
         display: flex;
         flex-direction: row;
-
         align-items: center;
         justify-content: space-between;
     }
@@ -721,6 +774,12 @@ i:hover {
         width: 200px;
         background: none;
         margin: 0.5em;
+        width: 100%;
+    }
+
+    .sidebar__blog-link {
+        margin-top: 0;
+        margin-bottom: 0.5em;
     }
 
     /* sticky nav for mobile */
@@ -738,6 +797,15 @@ i:hover {
         /* transition: 0.5s; */
     }
 
+    /* this makes the sidebar images larger for mobile */
+    .sidebar__img {
+        height: 175px;
+    }
+
+    .sidebar__item-info {
+        min-height: 100px;
+    }
+
     .main-grid {
         grid-template-columns: 1fr;
         grid-template-rows: auto auto;
@@ -752,11 +820,6 @@ i:hover {
         padding: 0.5em;
         display: flex;
         flex-direction: row;
-    }
-
-    .sidebar__item {
-        margin: 0.5em;
-        width: 100%;
     }
 
     .main__sidebar-wrap {
@@ -884,12 +947,26 @@ i:hover {
 }
 
 @media only screen and (max-width: 750px) {
+    .blog-post--wrapper {
+        width: 100%;
+        margin: 0;
+    }
+
+    .blog-post__h1 {
+        font-size: 2.6rem;
+    }
+
     /* this cancels out the hover effect of the blog grid items on mobile */
     .blog-grid__item:hover img {
         filter: opacity(7%);
+        transform: scale(1);
     }
 
-    .blog-grid__item:hover .blog-grid__item-info-wrap {
+    .blog-grid__item img {
+        filter: opacity(7%);
+    }
+
+    .blog-grid__item-info-wrap {
         background: none;
     }
 
@@ -949,7 +1026,7 @@ i:hover {
     .sidebar__item {
         /* height: 200px; */
         width: 100%;
-        margin: 0.5em;
+        margin: 0.5em 0.5em 1.5em 0.5em;
     }
 
     .sidebar__h3 {
@@ -1046,6 +1123,9 @@ i:hover {
         left: -300px;
     }
 }
+
+/* 404
+////////*/
 
 .error-message {
     display: flex;
